# hpl-parimutuel-eclipse

./: .eslintrc.cjs  Cargo.toml  README.md  clippy.toml  package.json  pnpm-lock.yaml  program-id.md
clients/js/: package.json
clients/js/scripts/: _utils.ts  create-config.ts  get-config.ts
clients/js/src/: plugin.ts
clients/js/src/hooked/: pda.ts
clients/rust/: Cargo.toml
clients/rust/src/: lib.rs
configs/: kinobi.mjs  shank.mjs  validator.cjs
crates/common/: Cargo.toml
crates/common-test/: Cargo.toml
crates/common/src/: account.rs
crates/common/src/cpi/: spl.rs
crates/cpi/: Cargo.toml  build.rs
crates/include-idl/: Cargo.toml
crates/include-idl/src/: lib.rs  parse.rs  shrink.rs
crates/security-txt/: Cargo.toml
crates/security-txt/src/: lib.rs  parse.rs
idls/: hpl_parimutuel.json  hpl_parimutuel_kinobi.json
programs/parimutuel/: Cargo.toml  build.rs
programs/parimutuel/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  macros.rs  pda.rs
programs/parimutuel/src/processor/: claim_v1.rs  create_config_v1.rs  create_market_v1.rs  create_user_position_v1.rs  create_user_v1.rs  deposit_v1.rs  invalidate_inactive_v1.rs  mod.rs  resolve_v1.rs  withdraw_creator_fees_v1.rs  withdraw_platform_fees_v1.rs  withdraw_v1.rs
programs/parimutuel/src/state/: config.rs  market.rs  mod.rs  user.rs  user_position.rs
programs/parimutuel/src/utils/: bps.rs  mod.rs  small_array.rs  traits.rs
xtask/: Cargo.toml
xtask/src/: idl.rs  main.rs  security.rs
