[workspace]
members = ["xtask", "crates/*", "programs/*", "clients/rust"]
resolver = "2"

[workspace.dependencies]
solana-program = "2.0.6"

spl-token-2022 = { version = "4.0.0", features = ["no-entrypoint"] }

borsh = { version = "0.10.3", features = ["const-generics"] }
bytemuck = { version = "1.17.0", features = ["extern_crate_std"] }
bincode = "1.3.3"

anyhow = "1.0.86"
thiserror = "1.0.63"
num-traits = "0.2.19"
num-derive = "0.4.2"
memchr = "2.7.4"

cpi = { path = "crates/cpi" }

borsh-size = { git = "https://github.com/Hedgehog-Markets/solana-utils" }
include-idl = { git = "https://github.com/Hedgehog-Markets/solana-utils" }
security-txt = { git = "https://github.com/Hedgehog-Markets/solana-utils" }
solana-utils = { git = "https://github.com/Hedgehog-Markets/solana-utils" }

[profile.release]
opt-level = 3
strip = true
overflow-checks = true
lto = true
codegen-units = 1
