[workspace]
members = ["xtask", "crates/*", "programs/*", "clients/rust"]
resolver = "2"

[workspace.dependencies]
solana-program = "2.0"

spl-token-2022 = { version = "5.0", features = ["no-entrypoint"] }

borsh = { version = "1.5.1", features = ["std", "derive"] }
bytemuck = { version = "1.18", features = ["extern_crate_std"] }
bincode = "1.3"

anyhow = "1.0"
thiserror = "1.0"
num-traits = "0.2.19"
num-derive = "0.4.2"
memchr = "2.7"

cpi = { path = "crates/cpi" }

borsh-size = { git = "https://github.com/Hedgehog-Markets/solana-utils" }
include-idl = { git = "https://github.com/Hedgehog-Markets/solana-utils" }
security-txt = { git = "https://github.com/Hedgehog-Markets/solana-utils" }
solana-utils = { git = "https://github.com/Hedgehog-Markets/solana-utils" }

[profile.release]
opt-level = 3
strip = true
overflow-checks = true
lto = true
codegen-units = 1
