[package]
name = "hpl-parimutuel"
version = "0.0.0"
edition = "2021"
publish = false

[features]
serde = ["dep:serde", "serde_with"]

[dependencies]
solana-program = "2.0.1"

borsh = { version = "0.10.3", features = ["const-generics"] }
thiserror = "1.0.61"
num-traits = "0.2.19"
num-derive = "0.4.2"

serde = { version = "1.0", optional = true }
serde_with = { version = "3.6.0", optional = true }
kaigan = "0.2.5"
