[package]
name = "include-idl"
version = "0.0.0"
edition = "2021"
publish = false

[features]
shrink = ["flate2", "serde_json", "thiserror"]
parse = ["flate2", "goblin", "serde_json", "thiserror"]

[dependencies]
thiserror = { workspace = true, optional = true }

flate2 = { version = "1.0.32", optional = true }
goblin = { version = "0.8.2", optional = true }
serde_json = { version = "1.0.125", optional = true }
