[package]
name = "parimutuel-program"
version = "3.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []

[dependencies]
common = { workspace = true }
security-txt = { workspace = true }

solana-program = { workspace = true }

spl-token-2022 = { workspace = true }

shank = "0.4.2"
borsh = { workspace = true }
bytemuck = { workspace = true }

thiserror = { workspace = true }
num-traits = { workspace = true }
num-derive = { workspace = true }

[dev-dependencies]
common-test = { workspace = true }
